style.css
.navbar {
    background-color: #333;
    font-size: 1.2em;
    padding: 1em;
    text-align: center;
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 1000;
}

.navbar ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

.navbar li{
    display: inline;
    margin: 0 1em;
}

.navbar a{
    color: #fff;
}

.main-content{
    padding-top: 5em;
}

.main-content section {
    padding: 2em 1em;
    text-align: center;

}


#home h1 {
  font-size: 2.5em;
  margin-bottom: 0.5em;
}

#home p {
  font-size: 1.2em;
  color: #666;
}

.portfolio-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    padding: 1em;
}

.portfolio-item {
    background-color: #fff;
    border: 1px solid #ddd;
    margin: 1em;
    padding: 1em;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    width: 30%;
    box-sizing: border-box;
    transition: transform 0.3s;
} 

.portfolio-item:hover {
    transform: scale(1.05);
}

.portfolio-item h3 {
    font-weight: bold;
    margin-bottom: 0.5em;

}

.portfolio-item p {
    margin-bottom: 0.5em;
    color: #666;
}

.portfolio-item img {
    width: 100%;
    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
}

#footer {
    background-color: #222;
    color: #fff;
    padding: 2em;
    text-align: center;
    position: relative;
    bottom: 0;
    width: 100%;
}

